<resources>
    <string name="app_name">SkyCast</string>

    <string name="current_weather_city">%1$s</string>
    <string name="current_weather_temp">%1$d°</string>
    <string name="current_weather_condition">%1$s \n%4$s %2$d° / %3$d°</string>

    <string name="item_weather_temp">%1$d°</string>
    <string name="null_city">Волгоград</string>
    <string name="degree_null">9°</string>
    <string name="current_weather_null">Облачно \nпт, 19:00 -9° / -10°C</string>
    <string name="button_text">Погода</string>
    <string name="edittext_hint">city</string>
    <string name="weather_icon">"Weather Icon from API "</string>
    <string name="get_weather_by_city">get weather by city</string>
    <string name="btn_cancel">Отмена</string>
    <string name="btn_location_enable">Включить</string>
    <string name="btn_submit">OK</string>
    <string name="title_city_dialog">Погода в городе</string>
    <string name="edittext_city_dialog">Введите название города</string>
    <string name="bodytext_location_dialog">Для точного прогноза погоды требуется включить геолокацию. Хотите включить её сейчас?</string>
    <string name="title_location_dialog">Геолокация выключена</string>

</resources>