<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:orientation="vertical"
            android:background="?attr/dialogBackgroundColor">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textSize="32sp"
                android:fontFamily="@font/inter_font"
                android:textColor="?attr/textColor"
                android:text="@string/title_location_dialog"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textSize="16sp"
                android:fontFamily="@font/inter_font"
                android:textColor="?attr/textColor"
                android:text="@string/bodytext_location_dialog"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_location_dialog_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="18dp"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/dialog_button_background"
                    android:layout_weight="1"
                    android:textColor="?attr/textColor"
                    android:fontFamily="@font/inter_font"
                    android:textSize="16sp"
                    android:text="@string/btn_cancel"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_location_dialog_submit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="18dp"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/dialog_button_background"
                    android:layout_weight="1"
                    android:textColor="?attr/textColor"
                    android:fontFamily="@font/inter_font"
                    android:textSize="16sp"
                    android:text="@string/btn_location_enable"/>
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</FrameLayout>