<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="25dp"
            android:orientation="vertical"
            android:background="@color/background_color_alphaBlue">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textSize="28sp"
                android:fontFamily="@font/inter_font"
                android:textColor="@color/text_color"
                android:text="@string/title_city_dialog"/>

            <EditText
                android:id="@+id/editText_city_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="40dp"
                android:hint="@string/edittext_city_dialog"
                android:background="@drawable/dialog_edittext_background"
                android:backgroundTint="@color/text_color"
                android:fontFamily="@font/inter_font"
                android:gravity="center"
                android:minHeight="48dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:autofillHints=""
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_city_dialog_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="18dp"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/dialog_button_background"
                    android:layout_weight="1"
                    android:textColor="@color/text_color"
                    android:fontFamily="@font/inter_font"
                    android:textSize="16sp"
                    android:text="@string/btn_cancel"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:ellipsize="end"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_city_dialog_submit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="18dp"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/dialog_button_background"
                    android:layout_weight="1"
                    android:textColor="@color/text_color"
                    android:fontFamily="@font/inter_font"
                    android:textSize="16sp"
                    android:text="@string/btn_submit"/>
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</FrameLayout>